--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --clr-white-rgb: 255, 255, 255;
+  --clr-blue: #2782bb;
+}
 html {
   font-size: 10px;
 }
@@ -47,7 +51,7 @@ body {
   border-radius: 0.4rem;
   font-weight: bold;
   font-size: 1.8rem;
-  background-color: #2782bb;
+  background-color: var(--clr-blue);
   color: white;
   border: none;
   animation: radiate 2.2s infinite;
@@ -58,19 +62,20 @@ body {
 .start-btn:hover {
   transform: scale(1.1);
   animation: none;
-  box-shadow: 0 0 30px 15px #2782bb, 0 0 45px 25px rgba(255, 255, 255, 1);
+  box-shadow: 0 0 30px 15px var(--clr-blue),
+    0 0 45px 25px rgba(var(--clr-white-rgb), 1);
 }
 
 @keyframes radiate {
   0% {
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+    box-shadow: 0 0 0 0 rgba(var(--clr-white-rgb), 1);
   }
 
   70% {
-    box-shadow: 0 0 3rem 1.8rem rgba(255, 255, 255, 0);
+    box-shadow: 0 0 3rem 1.8rem rgba(var(--clr-white-rgb), 0);
   }
 
   100% {
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 0 rgba(var(--clr-white-rgb), 0);
   }
 }
