intro rule sctn css partially implemented

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 }
 
 :root {
+  --clr-white: #ffffff;
   --clr-white-rgb: 255, 255, 255;
   --clr-blue: #2782bb;
 }
@@ -29,7 +30,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex: 2;
+  flex: 1;
   background: #141e30; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -46,6 +47,7 @@ body {
 /* 3. start button styling */
 
 .start-btn {
+  letter-spacing: 0.3rem;
   min-width: 14rem;
   padding: 2rem;
   border-radius: 0.4rem;
@@ -72,10 +74,43 @@ body {
   }
 
   70% {
-    box-shadow: 0 0 3rem 1.8rem rgba(var(--clr-white-rgb), 0);
+    box-shadow: 0 0 4rem 2rem rgba(var(--clr-white-rgb), 0);
   }
 
   100% {
     box-shadow: 0 0 0 0 rgba(var(--clr-white-rgb), 0);
   }
+}
+
+/* 4. intro rule section Styling */
+.content-section-title {
+  margin: 0;
+  font-size: 4rem;
+  border-radius: 0.4rem;
+  letter-spacing: 0.3rem;
+  color: white;
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+  text-align: center;
+  padding: 1.4rem 0;
+}
+
+.rule-list {
+  flex: 1;
+  font-weight: 900;
+}
+.section-container {
+  display: flex;
+  flex-direction: column;
+  width: 60rem;
+  height: 54rem;
+  border-radius: 0.4rem;
+  letter-spacing: 0.3rem;
+  color: black;
+  background-color: var(--clr-white);
+}
+
+.footer {
+  display: flex;
+  justify-content: flex-end;
 }
