header css + logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,6 +175,14 @@ body {
   background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
 }
 
+.application-title {
+  margin: 0 0 0 2rem;
+}
+
+.fa-js {
+  color: yellow;
+  margin-right: 2rem;
+}
 .header {
   display: flex;
   flex-direction: column;
@@ -191,24 +199,31 @@ body {
   padding: 0.2rem;
   font-weight: bold;
   font-size: 1.8rem;
-  margin-bottom: 4rem;
+  margin-bottom: 2.5rem;
   padding: 2rem 0;
   cursor: pointer;
 }
 
 .choice-item:hover {
   background-color: #414141;
-  transition: background-color 0.5s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 .choice-item:last-child {
   margin-bottom: 0;
 }
 .timer {
-  align-self: flex-end;
-  margin: 0.8rem 0.8rem 0.8rem 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 1.8rem 0.8rem 1.8rem 0;
+}
+.time {
+  margin-left: 1rem;
 }
 .time-bar {
   width: 100%;
   background-color: green;
   height: 1rem;
+}
+.timer-hud {
+  display: flex;
 }
