--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,6 +214,7 @@ body {
 .timer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 1.8rem 0.8rem 1.8rem 0;
 }
 .time {
