--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,21 +70,26 @@ body {
 }
 
 /* 4. intro rule section Styling */
-
+.section-container .header {
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 .header {
   background-color: #000000;
   background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
   border-radius: 0.4rem 0.4rem 0 0;
   color: white;
   letter-spacing: 0.3rem;
+  display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 .content-section-title {
-  margin: 0;
+  margin: 0 0 0 2rem;
   font-size: 4rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 1.4rem 0;
 }
 
@@ -292,6 +297,7 @@ form {
   font-weight: bold;
   font-size: 1.8rem;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .playagain-btn:hover {
@@ -305,6 +311,20 @@ form {
 }
 .fa-crown:hover {
   color: gold;
+}
+
+/* Highscore section styling */
+
+#highscore-section .hs-header {
+  background-color: darkred;
+  background-image: none;
+}
+
+.footer .playagain-btn {
+  margin-bottom: 2rem;
+}
+.footer {
+  height: 5rem;
 }
 /* keyframes */
 
