--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,6 +93,7 @@ body {
   font-size: 3rem;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   padding: 1.4rem 0;
 }
 
@@ -105,13 +106,15 @@ body {
   font-weight: 900;
   margin: 2rem 2rem;
 }
-.rule-item {
+.rule-item,
+.rank-item {
   font-weight: bold;
   font-size: 1.8rem;
   margin-bottom: 4rem;
 }
 .rule-item:last-child,
-.choice-item:last-child {
+.choice-item:last-child,
+.rank-item:last-child {
   margin-bottom: 0;
 }
 
@@ -331,6 +334,27 @@ form {
 }
 .footer {
   height: 6rem;
+}
+
+.rank-title {
+  font-size: 4rem;
+  text-align: center;
+}
+.rank-list {
+  flex: 1;
+  width: 100%;
+}
+.rank-item {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  font-weight: bold;
+  font-size: 1.8rem;
+  border: 1px solid black;
+  border-radius: 0.4rem;
+  padding: 0.5rem;
+  margin: 1rem;
+  overflow: hidden;
 }
 /* keyframes */
 
