started working on js. start btn > info sctn

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,6 @@ body {
 }
 
 /* 3. start button styling */
-
 .start-btn {
   letter-spacing: 0.3rem;
   min-width: 14rem;
@@ -158,6 +157,18 @@ body {
   margin-left: 0.3rem;
 }
 
+.section-hide {
+  opacity: 0;
+  position: absolute;
+  transform: scale(0.1);
+}
+
+.section-active {
+  position: block;
+  opacity: 1;
+  transform: scale(1);
+  transition: all 0.6s ease-in-out;
+}
 /* Question Container Styles */
 
 .application-title {
