--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@ body {
   background-color: var(--clr-blue);
   color: var(--clr-white);
   border: none;
-  animation: radiate 2.2s infinite;
+  animation: radiate 2s infinite;
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
 }
@@ -101,7 +101,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  flex: 1;
+  flex: 2;
   font-weight: 900;
   margin: 2rem 2rem;
 }
@@ -158,14 +158,14 @@ body {
 }
 
 .section-hide {
-  opacity: 0;
   position: absolute;
+  visibility: hidden;
   transform: scale(0.1);
 }
 
 .section-active {
-  position: block;
-  opacity: 1;
+  position: relative;
+  visibility: visible;
   transform: scale(1);
   transition: all 0.6s ease-in-out;
 }
