--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,11 +232,7 @@ body {
   margin-right: 1rem;
   width: 6.4rem;
 }
-.time-bar {
-  width: 100%;
-  background-color: green;
-  height: 1rem;
-}
+
 .timer-hud {
   display: flex;
   flex-direction: column;
@@ -328,6 +324,8 @@ form {
   font-size: 1.8rem;
   cursor: pointer;
   text-decoration: none;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .playagain-btn:hover {
@@ -364,6 +362,7 @@ form {
 .rank-list {
   flex: 1;
   width: 100%;
+  padding: 0;
 }
 .rank-item {
   display: flex;
@@ -376,6 +375,10 @@ form {
   padding: 0.5rem;
   margin: 1rem;
   overflow: hidden;
+}
+
+.playagain-btn:first-child {
+  margin-right: 2rem;
 }
 /* keyframes */
 
